--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -12,3 +12,46 @@
     --f-xs: 18px;
     --f-body: 15px
 }
+
+// Boilerplate stayless
+
+html {
+    font-size: 100%;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    font-family: "Inter", sans-serif;
+    line-height: 1.7;
+}
+
+h1,
+h2,
+h3 {
+    line-height: 1.1;
+}
+
+h1,
+h2,
+h3,
+p {
+    margin-top: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+// Sets the minimum width to 1110px or (100vw - 32px), whatever is smaller
+.wrapper {
+    width: min(1110px, calc(100% - 32px));
+    margin-inline: auto; //Sets onli the left & right margin (margin-block sets only the top & bottom)
+}
