--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,3 +1,5 @@
+@use 'util' as u;
+
 :root {
     --c-white: #fffdfa;
     --c-blue: #00001a;
@@ -5,12 +7,12 @@
     --c-red: #f15d51;
     --c-silver: #c5c6ce;
     --c-yellow: #e9aa52;
-    --f-xl: clamp(2.5rem, 2.147887323943662rem + 1.5023474178403755vw, 3.5rem); //40px to 56px
-    --f-l: clamp(2rem, 1.823943661971831rem + 0.7511737089201878vw, 2.5rem); //32px to 40px
-    --f-m: 32px;
-    --f-s: 20px;
-    --f-xs: 18px;
-    --f-body: 15px
+    --f-xl: clamp(u.rem(40), 2.147887323943662rem + 1.5023474178403755vw, u.rem(56));
+    --f-l: clamp(u.rem(32), 1.823943661971831rem + 0.7511737089201878vw, u.rem(40));
+    --f-m: u.rem(32);
+    --f-s: u.rem(20);
+    --f-xs: u.rem(18);
+    --f-body: u.rem(15);
 }
 
 // Boilerplate stayless
@@ -50,8 +52,26 @@ a {
     text-decoration: none;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style-type: none;
+}
+
 // Sets the minimum width to 1110px or (100vw - 32px), whatever is smaller
 .wrapper {
-    width: min(1110px, calc(100% - 32px));
+    width: min(1110px, calc(100% - u.rem(32)));
     margin-inline: auto; //Sets onli the left & right margin (margin-block sets only the top & bottom)
 }
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+//End of boyllerplate styles
+
