--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -14,5 +14,11 @@
     &__link {
         color: var(--c-blue);
         font-size: u.rem(18);
+        line-height: 1.3;
+
+        @media (width >= 1110px) {
+            color: var(--c-gray);
+        }
+
     }
 }
