Remuve sass function px to rem convertion

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,19 +1,17 @@
-@use '../util' as u;
-
 .header {
 
     &__logo {
-        width: u.rem(45);
+        width: 2.813rem;
 
         @media (width >= 1110px) {
-            width: u.rem(64);
+            width: 4rem;
 
         }
     }
 
     &__link {
         color: var(--c-blue);
-        font-size: u.rem(18);
+        font-size: var(--f-xs);
         line-height: 1.3;
 
         @media (width >= 1110px) {
