--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,5 +1,3 @@
-@use 'util' as u;
-
 :root {
     --c-white: #fffdfa;
     --c-blue: #00001a;
@@ -7,12 +5,12 @@
     --c-red: #f15d51;
     --c-silver: #c5c6ce;
     --c-yellow: #e9aa52;
-    --f-xl: clamp(u.rem(40), 2.147887323943662rem + 1.5023474178403755vw, u.rem(56));
-    --f-l: clamp(u.rem(32), 1.823943661971831rem + 0.7511737089201878vw, u.rem(40));
-    --f-m: u.rem(32);
-    --f-s: u.rem(20);
-    --f-xs: u.rem(18);
-    --f-body: u.rem(15);
+    --f-xl: clamp(2.5rem, 2.147887323943662rem + 1.5023474178403755vw, 3.5rem);//40 to 56
+    --f-l: clamp(2rem, 1.823943661971831rem + 0.7511737089201878vw, 2.5rem);// 32 to 40
+    --f-m: 2rem; //32px
+    --f-s: 1.25rem; //20px
+    --f-xs: 1.125rem; //18px
+    --f-body: 0.938rem; //15px
 }
 
 // Boilerplate stayless
@@ -33,6 +31,7 @@ body {
     min-height: 100vh;
     font-family: "Inter", sans-serif;
     line-height: 1.7;
+    font-size: var(--f-body);
 }
 
 h1,
@@ -45,7 +44,7 @@ h1,
 h2,
 h3,
 p {
-    margin-top: 0;
+    margin: 0;
 }
 
 a {
@@ -63,7 +62,7 @@ li {
 
 // Sets the minimum width to 1110px or (100vw - 32px), whatever is smaller
 .wrapper {
-    width: min(1110px, calc(100% - u.rem(32)));
+    width: min(1110px, calc(100% - 2rem));
     margin-inline: auto; //Sets onli the left & right margin (margin-block sets only the top & bottom)
 }
 
