--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -32,11 +32,13 @@ body {
     font-family: "Inter", sans-serif;
     line-height: 1.7;
     font-size: var(--f-body);
+    color: var(--c-gray);
 }
 
 h1,
 h2,
 h3 {
+    color: var(--c-blue);
     line-height: 1.1;
 }
 
