--- a/scss/components/_new.scss
+++ b/scss/components/_new.scss
@@ -18,6 +18,7 @@
     }
 
     &__headline {
+        display: inline-block;
         font-size: var(--f-s);
         font-weight: 800;
         margin-block-end: 0.5rem;
