--- a/scss/components/_new.scss
+++ b/scss/components/_new.scss
@@ -1,6 +1,12 @@
 .new {
+
     background-color: var(--c-blue);
     padding: 1.5rem 1.25rem;
+
+    @media (width >= 69.375em) {
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
+    }
 
     &__title {
         font-size: clamp(2rem, 1.823943661971831rem + 0.7511737089201878vw, 2.5rem);
