--- a/scss/components/_feature.scss
+++ b/scss/components/_feature.scss
@@ -44,5 +44,9 @@
         font-weight: 700;
         text-transform: uppercase;
         padding: 0.75rem 2rem;
+
+        &:hover {
+            background-color: var(--c-blue);
+        }
     }
 }
