--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -51,6 +51,8 @@ p {
 
 a {
     text-decoration: none;
+    transition: 150ms ease-in-out;
+    // transition-property: color, background-color;
 }
 
 ul {
