--- a/scss/components/_new.scss
+++ b/scss/components/_new.scss
@@ -30,6 +30,10 @@
         margin-block-end: 0.5rem;
         color: var(--c-white);
 
+        &:hover {
+            color: var(--c-yellow);
+        }
+
     }
 
     &__description {
