--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,8 +1,9 @@
 .header {
+    display: flex;
+    justify-content: space-between;
+    padding-block: 1.875rem;
 
     @media (width >= 69.375em) {
-        display: flex;
-        justify-content: space-between;
         padding-block: 5.625rem 3.438rem;
     }
     
@@ -10,15 +11,19 @@
     &__logo {
         width: 2.813rem;
 
-        @media (width >= 1110px) {
+        @media (width >= 69.375em) {
             width: 4rem;
 
         }
     }
 
     &__links {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+
         @media (width >= 69.375em) {
-            display: flex;
+            flex-direction: row;
             gap: 2.5rem;
         }
     }
